src/test/ui/issues/issue-2XXXX/issue-20261.stderr
error[E0282]: type annotations needed for `(_,)`
  --> $DIR/issue-20261.rs:4:11
   |
LL |     for (ref i,) in [].iter() {
   |                     --------- this method call resolves to `std::slice::Iter<'_, T>`
LL |         i.clone();
   |           ^^^^^ cannot infer type
   |
   = note: type must be known at this point

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
